GPROD/apps/backend/k8s/overlays/prod-gprod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gprod-backend
  namespace: prod-gprod
  labels:
    app: gprod-backend
    environment: production
spec:
  selector:
    app: gprod-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
